[master] - changing order of set in unit tests

--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -4,4 +4,4 @@ RUN chmod +x /wait
 ENV NODE_ENV dev
 RUN npm install && npm install -g mocha
 ARG port=80
-CMD /wait && mocha test/unitTests.js --exit
+CMD /wait && mocha --timeout 15000 test/unitTests.js --exit
